Small styling updates

--- a/theme/src/_image_detail.scss
+++ b/theme/src/_image_detail.scss
@@ -8,6 +8,7 @@
     }
     .orbit-caption {
         font-size: $paragraph-font-size;
+        background-color: rgba(34, 34, 34, 0.7);
 
         span {
             display: block;
