--- a/theme/templates/_header.html
+++ b/theme/templates/_header.html
@@ -4,7 +4,8 @@
       <li><a href="{{ SITEURL }}/"><span class="fg-blue">Stein</span>&middot;<span class="fg-red">reich</span></a></li>
     </ul>
     <ul class="cell small-12 medium-auto menu">
-      <li><a href="{{ SITEURL }}">Raumplan</a></li>
+      <li><a href="{{ SITEURL }}/pages/raumplan-aegyptisches-museum.html">Ägyptisches Museum</a></li>
+      <li><a href="{{ SITEURL }}/pages/raumplan-antikenmuseum.html">Antikenmuseum</a></li>
       <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
       <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
     </ul>
