--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -11,13 +11,13 @@
       <div class="cell small-12 medium-6 grid-y">
         <h1 class="cell greek width-auto"><span class="fg-blue">λιθῶν</span>&middot;<span class="fg-red">πλούσιος</span></h1>
         <ul class="cell menu width-auto">
-          <li><a href="{{ SITEURL }}/pages/raumplane.html">Raumpläne</a></li>
+          <li><a href="{{ SITEURL }}/pages/stationen.html">Stationen</a></li>
           <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
           <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
         </ul>
         <h1 class="cell width-auto"><span class="fg-blue">Stein</span>&middot;<span class="fg-red">reich</span></h1>
         <ul class="cell menu width-auto">
-          <li><a href="{{ SITEURL }}/pages/raumplane.html">Raumpläne</a></li>
+          <li><a href="{{ SITEURL }}/pages/stationen.html">Stationen</a></li>
           <li><a href="{{ SITEURL }}/categories.html">Themen</a></li>
           <li><a href="{{ SITEURL }}/tags.html">Entdecken</a></li>
         </ul>
