Replace themes with stations

--- a/theme/src/_explore.scss
+++ b/theme/src/_explore.scss
@@ -212,3 +212,15 @@
         }
     }
 }
+
+.categories {
+    @include breakpoint(medium only) {
+        .label-list {
+            display: flex;
+
+            > div {
+                flex: 1 1 auto;
+            }
+        }
+    }
+}
