--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -10,13 +10,13 @@
   <div class="grid-container">
     <div class="grid-x">
       <div class="cell small-12">
-        <h1>Themen</h1>
+        <h1>Stationen</h1>
         <div class="grid-x">
           <div class="cell small-12 medium-order-2 large-auto large-order-1 figure">
             <div><button aria-label="Vorhergehender Text" class="prev-article">&#9664;&#xFE0E;</button></div>
             <ul class="figure-list">
               {% for article in articles %}
-                {% if article.tags %}
+                {% if article.category %}
                   <li>
                     <a href="{{ SITEURL }}/{{ article.url }}">
                       <figure class="{{ article.category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">
@@ -36,11 +36,28 @@
             <div><button aria-label="Nächster Text" class="next-article">&#9654;&#xFE0E;</button></div>
           </div>
           <div class="cell small-12 medium-order-1 large-shrink large-order-2">
-            <ul class="menu vertical label-list">
-              {% for (category, articles) in categories|sort(attribute='0.slug') %}
-                <li><a href="{{ SITEURL }}/{{ category.url }}" class="{{ category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ category }}</a></li>
-              {% endfor %}
-            </ul>
+            <div class="label-list">
+              <div>
+                <h2 class="fg-blue">Ägyptisches Museum</h2>
+                <ul class="menu vertical margin-bottom">
+                  {% for category_name in MUSEUM_EGYPT %}
+                    {% for (category, articles) in categories|selectattr('0.slug', 'eq', category_name) %}
+                      <li><a href="{{ SITEURL }}/{{ category.url }}" class="{{ category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ category }}</a></li>
+                    {% endfor %}
+                  {% endfor %}
+                </ul>
+              </div>
+              <div>
+                <h2 class="fg-red">Antikenmuseum</h2>
+                <ul class="menu vertical">
+                  {% for category_name in MUSEUM_ANTIQUITIES %}
+                    {% for (category, articles) in categories|selectattr('0.slug', 'eq', category_name) %}
+                      <li><a href="{{ SITEURL }}/{{ category.url }}" class="{{ category.slug }}" data-highlight-class="{% if loop.index is divisibleby(2) %}highlight-red{% else %}highlight-blue{% endif %}">{{ category }}</a></li>
+                    {% endfor %}
+                  {% endfor %}
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
