--- a/theme/templates/tags.html
+++ b/theme/templates/tags.html
@@ -10,7 +10,7 @@
   <div class="grid-container">
     <div class="grid-x">
       <div class="cell small-12">
-        <h1>Entdecken</h1>
+        <h1>Themen</h1>
         <div class="grid-x">
           <div class="cell small-12 medium-order-2 large-auto large-order-1 figure">
             <div><button aria-label="Vorhergehender Text" class="prev-article">&#9664;&#xFE0E;</button></div>
