--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-<title>Themen</title>
+<title>Stationen</title>
 {% endblock head %}
 
 {% block body %}
